test: compile test sources against the Java 11 API surface (#230)
Signed-off-by: Saurabh Jain <saurabh.jain@getaxonflow.com>